# axmol

./: .gitignore  CMakeLists.txt  CMakeOptions.md
app/: .gitignore  CMakeLists.txt
app/Source/: AppDelegate.cpp  cocos_ext.cpp  lua_module_register.cpp  win_ext.cpp
app/proj.android/app/: AndroidManifest.xml
app/tools/: Utils.py  common_utils.py  format_lua.py  format_lua_module.py  lua_utils.py
app/tools/config/: module_manager.lua.tmpl
cmake/Modules/: AXLinkHelpers.cmake
core/: CMakeLists.txt  axmol.h
core/2d/: CMakeLists.txt  Node.cpp  Node.h  Transition.cpp
core/base/: Director.cpp  Macros.h  Ref.cpp  Ref.h  Scheduler.cpp  Scheduler.h  ScriptSupport.cpp  ScriptSupport.h  Types.cpp  Types.h
core/platform/: GLView.h
core/ui/UIEditBox/: UIEditBox.cpp  UIEditBox.h  UIEditBoxImpl-common.cpp
extensions/: CMakeLists.txt
extensions/GUI/ControlExtension/: Control.cpp
extensions/scripting/lua-bindings/: CMakeLists.txt
extensions/scripting/lua-bindings/auto/: axlua_types_manual.lua
extensions/scripting/lua-bindings/manual/: LuaBasicConversions.cpp  LuaBasicConversions.h  LuaBridge.cpp  LuaBridge.h  LuaEngine.cpp  LuaEngine.h  LuaStack.cpp  LuaStack.h  Tolua.cpp  Tolua.h  cocos_ext.cpp  lua_module_register.cpp  lua_module_register.h  tolua_fix.cpp  tolua_manual_convert.h
extensions/scripting/lua-bindings/manual/base/: LuaScriptHandlerMgr.h  axlua_base_manual.cpp
extensions/scripting/lua-bindings/proj.android/: CMakeLists.txt
tools/bindings-generator/: .gitignore  ConvertUtils.py  Fields.py  NativeClass.py  NativeEnum.py  NativeStruct.py  NativeType.py  ax_base.ini  genbindings.py  generator.py  generatorLuaClassDesc.py  init_custom_cpp_types.py  tmp.py  types.txt
tools/bindings-generator/code_template/: VectorPush.tmpl  engine_enums.lua.tmpl  engine_types.lua.tmpl  lua_auto_gen_codes.cpp.tmpl  lua_fun_to_std_fun.tmpl  parse_config.json  tolua_auto_convert.h.tmpl
tools/bindings-generator/configs/: VectorGet.tmpl  ax_base.ini  engine_enums.lua.tmpl  engine_types.lua.tmpl  lua_auto_gen_codes.cpp.tmpl  parse_config.json  tolua_auto_convert.cpp.tmpl  tolua_auto_convert.h.tmpl
tools/bindings-generator/targets/lua/templates/: layout_head.c.tmpl  register.c.tmpl  struct_convert.h.tmpl
tools/tolua/: ax_3d.ini  ax_audioengine.ini  ax_backend.ini  ax_base.ini  ax_controller.ini  ax_csloader.ini  ax_extension.ini  ax_navmesh.ini  ax_physics.ini  ax_physics3d.ini  ax_spine.ini  ax_studio.ini  ax_ui.ini  ax_video.ini  ax_webview.ini  genbindings.py
